reworked menu and added rendering options

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
-# Ignore everything
-*
-
-#Except
-!.gitignore
-!README.md
-!LICENSE
-!src/
-
-!build/
-!build/libs
-!build/libs/*.jar
-
-!javadoc/*
+/.git/
+/.gradle/
+/.settings/
+/bin/
+/build/
+/eclipse/
+/gradle/
+/.classpath
+/gradlew
+/.project
+/gradlew.bat
+/CREDITS-fml.txt
+/ForgeREADME.txt
+/LICENSE-fml.txt
+/MinecraftForge-Credits.txt
+/MinecraftForge-License.txt
+/forge-1.7.10-10.13.2.1291-changelog.txt
