--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,20 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.7.10-1.1.2"
+version = "1.8-1.1.3"
 group= "com.github.scuwr.snitchvisualizer" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "SnitchVisualizer"
 
 minecraft {
-    version = "1.7.10-10.13.2.1291"
+    version = "1.8-11.14.1.1325"
     runDir = "eclipse"
+    
+    // the mappings can be changed at any time, and must be in the following format.
+    // snapshot_YYYYMMDD   snapshot are built nightly.
+    // stable_#            stables are built at the discretion of the MCP team.
+    // Use non-default mappings at your own risk. they may not allways work.
+    // simply re-run your setup task after changing the mappings to update your workspace.
+    mappings = "snapshot_20141130"
 }
 
 dependencies {
