--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@
 /MinecraftForge-Credits.txt
 /MinecraftForge-License.txt
 /forge-1.7.10-10.13.2.1291-changelog.txt
+/Forge_Client.launch
+/Forge_Server.launch
+/Paulscode IBXM Library License.txt
+/Paulscode SoundSystem CodecIBXM License.txt
+/README.txt
+/forge-1.8-11.14.4.1563-changelog.txt
+/logs/
